# idatt2104

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  watch_and_run.sh
assets/wolf/: Wolf_obj.mtl
include/netcode/: client.hpp  game_data_types.hpp  networked_entity.hpp  packet_types.hpp  prediction.hpp  reconciliation.hpp  serialization.hpp  server.hpp  settings.hpp  snapshot.hpp
include/netcode/client/: client.hpp  player_client.hpp
include/netcode/game_netcode/: interpolation_system.hpp  prediction_system.hpp
include/netcode/math/: my_vec3.hpp
include/netcode/packets/: player_state_packet.hpp
include/netcode/prediction/: interpolation.hpp  netcode.hpp  prediction.hpp  reconciliation.hpp  snapshot.hpp
include/netcode/serialization/: player_state_serializer.hpp
include/netcode/server/: player_server.hpp  server.hpp
include/netcode/utils/: logger.hpp  network_logger.hpp  visualization_logger.hpp
include/netcode/visualization/: concrete_settings.hpp  control_panel.hpp  entity_controller.hpp  game_scene.hpp  game_window.hpp  network_utility.hpp  player.hpp  settings.hpp
src/: main.cpp
src/client/: client.cpp  player_client.cpp
src/game_netcode/: interpolation_system.cpp  prediction_system.cpp
src/netcode/: interpolation.cpp  prediction.cpp  reconciliation.cpp  snapshot.cpp
src/netcode/client/: client.cpp
src/netcode/prediction/: interpolation.cpp  prediction.cpp  reconciliation.cpp  snapshot.cpp
src/netcode/server/: server.cpp
src/netcode/utils/: logger.cpp  network_logger.cpp  visualization_logger.cpp
src/netcode/visualization/: concrete_settings.cpp  control_panel.cpp  game_scene.cpp  game_window.cpp  network_utility.cpp  settings.cpp
src/serialization/: player_state_serializer.cpp
src/server/: player_server.cpp  server.cpp
src/utils/: logger.cpp  network_logger.cpp  visualization_logger.cpp
src/visualization/: control_panel.cpp  entity_controller.cpp  game_scene.cpp  game_window.cpp  network_utility.cpp  player.cpp  settings.cpp  visualization_demo.cpp
tests/: test_buffer.cpp  test_client.cpp  test_server.cpp
tests/visualization/: gui_full.cpp  gui_test.cpp
